--- a/notebooks/03_personalStats.ipynb
+++ b/notebooks/03_personalStats.ipynb
@@ -15,25 +15,7 @@
     {
      "data": {
       "text/html": [
-       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>Cytoscape.NET.Interactive, 0.2.0</span></li><li><span>FSharp.Data, 6.3.0</span></li><li><span>FSharp.Stats, 0.5.1-preview.1</span></li><li><span>Plotly.NET.Interactive, 4.2.1</span></li></ul></div></div>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Loading extensions from `C:\\Users\\bvenn\\.nuget\\packages\\cytoscape.net.interactive\\0.2.0\\interactive-extensions\\dotnet\\Cytoscape.NET.Interactive.dll`"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Loading extensions from `C:\\Users\\bvenn\\.nuget\\packages\\plotly.net.interactive\\4.2.1\\interactive-extensions\\dotnet\\Plotly.NET.Interactive.dll`"
+       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>Cytoscape.NET.Interactive, 0.2.0</span></li><li><span>FSharp.Stats, 0.5.1-preview.1</span></li><li><span>Plotly.NET.Interactive, 4.2.1</span></li></ul></div></div>"
       ]
      },
      "metadata": {},
@@ -41,10 +23,8 @@
     }
    ],
    "source": [
-    "// nuget references\n",
     "#r \"nuget: FSharp.Stats, 0.5.1-preview.1\"\n",
     "#r \"nuget: Plotly.NET.Interactive, 4.2.1\"\n",
-    "#r \"nuget: FSharp.Data, 6.3.0\"\n",
     "#r \"nuget: Cytoscape.NET.Interactive, 0.2.0\"\n",
     "\n",
     "open FSharp.Stats\n",
@@ -55,72 +35,10 @@
     "open Cytoscape.NET\n",
     "open System\n",
     "\n",
-    "\n",
-    "//FSharp.Stats.ServiceLocator.setEnvironmentPathVariable (@\"C:\\Users\\bvenn\\source\\repos\\FSharp.Stats\\lib\")\n",
-    "//FSharp.Stats.Algebra.LinearAlgebra.Service()\n",
-    "\n",
-    "//axis styling extension module\n",
-    "module Chart = \n",
-    "    let myAxis name = LinearAxis.init(Title=Title.init name,Mirror=StyleParam.Mirror.All,Ticks=StyleParam.TickOptions.Inside,ShowGrid=false,ShowLine=true)\n",
-    "    let withAxisTitles x y chart = \n",
-    "        chart \n",
-    "        |> Chart.withTemplate ChartTemplates.lightMirrored\n",
-    "        |> Chart.withXAxis (myAxis x) \n",
-    "        |> Chart.withYAxis (myAxis y)\n",
-    "\n",
-    "type Category =\n",
-    "    | Beer\n",
-    "    | Beverage\n",
-    "    | Coffee\n",
-    "    | Other\n",
-    "    with \n",
-    "        static member FromString (s: string) =\n",
-    "            match s with\n",
-    "            | \"Beer\" -> Beer\n",
-    "            | \"Beverage\" -> Beverage\n",
-    "            | \"Coffee\" -> Coffee\n",
-    "            | _ -> Other\n",
-    "\n",
-    "type Order = {\n",
-    "    DateTime    : System.DateTime\n",
-    "    Name        : string\n",
-    "    Gender      : char\n",
-    "    Product     : string\n",
-    "    Price       : float\n",
-    "    Department  : string\n",
-    "    Category    : Category\n",
-    "    Amount      : int\n",
-    "    } with\n",
-    "        static member Create time (name: string) gender product price department category amount = {\n",
-    "            DateTime  = time\n",
-    "            Name      = name\n",
-    "            Gender    = gender\n",
-    "            Product   = product\n",
-    "            Price     = price\n",
-    "            Department= department\n",
-    "            Category  = category\n",
-    "            Amount    = amount\n",
-    "            }\n",
-    "\n",
-    "let data = \n",
-    "    let read =\n",
-    "        CsvFile\n",
-    "            //.Load(@\"..\\data\\coffeedata.txt\")\n",
-    "            .Load(@\"C:\\Users\\bvenn\\source\\repos\\brewing-discoveries-workshop\\data\\coffeedata.txt\")\n",
-    "            .Cache()\n",
-    "    read.Rows\n",
-    "    |> Seq.map (fun row -> \n",
-    "        Order.Create\n",
-    "            (System.DateTime.ParseExact((row.GetColumn \"DateTime\"),\"dd/MM/yyyy HH:mm:ss\",null))\n",
-    "            (row.GetColumn \"Name\")\n",
-    "            (row.GetColumn \"Gender\" |> char)\n",
-    "            (row.GetColumn \"Product\")\n",
-    "            (row.GetColumn \"Price\" |> float) \n",
-    "            (row.GetColumn \"Department\")\n",
-    "            ((row.GetColumn \"Category\") |> Category.FromString)\n",
-    "            (row.GetColumn \"Amount\" |> int)\n",
-    "        )\n",
-    "    |> Array.ofSeq\n",
+    "// use a script to import data in all notebooks > 1\n",
+    "#load \"import.fsx\"\n",
+    "open Import\n",
+    "let orders = Import.orders\n",
     "\n",
     "let getDepartmentColor (department: string) = \n",
     "    match department with \n",
