--- a/notebooks/06_statisticalTesting.ipynb
+++ b/notebooks/06_statisticalTesting.ipynb
@@ -119,7 +119,7 @@
     "There are some conditions the samples should satisfy. They should be approximately normal distributed or follow a normal distribution shape. If this condition cannot be satisfied you should use a nonparametric test, as a Wilcoxon signed ranked test. If the variances of the samples you want to test differ a lot, you should use a Welch test instead. This t test alternative can be calculated by setting the `equal variances` parameter in `Testing.TTest.twoSample` to false.\n",
     "\n",
     "Task:\n",
-    "Test wether a person drinks significantly more coffee per week than another. As you'll need a sufficient sample size, you can first plot the distribution of different people using histograms, box plots or violin plots.\n",
+    "Test wether a person drinks significantly more coffee per month than another. As you'll need a sufficient sample size, you can first plot the distribution of different people using histograms, box plots or violin plots.\n",
     "Hint: You can assume the distributions of \"Benedikt V.\" and \"Michelle Porter\" beeing normally distributed.\n"
    ]
   },
