last minute adjustments

--- a/notebooks/empty/02_basicStats.ipynb
+++ b/notebooks/empty/02_basicStats.ipynb
@@ -24,7 +24,6 @@
     "#r \"nuget: Plotly.NET.Interactive, 4.2.1\"\n",
     "#r \"nuget: Cytoscape.NET.Interactive, 0.2.0\"\n",
     "\n",
-    "\n",
     "open FSharp.Stats\n",
     "open Plotly.NET\n",
     "open Plotly.NET.StyleParam\n",
@@ -44,6 +43,8 @@
    "metadata": {},
    "source": [
     "# Analysis I - basic stats\n",
+    "\n",
+    "- [FSharp.Stats docs](https://fslab.org/FSharp.Stats/)\n",
     "\n",
     "The first global analysis is the visualization of how many products of the individual categories are logged in a work day (Mo-Fr). Therefore we need a function, that filters the data accordingly, determines the number of logs each day and creates a histogram."
    ]
